[gd_scene load_steps=2 format=2]

[ext_resource path="res://Characters/RobotControllerBase.gd" type="Script" id=1]

[node name="Controller" type="Node" index="0"]

script = ExtResource( 1 )

[node name="DebugTimer" type="Timer" parent="." index="0" groups=[
"debug_timer",
]]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="ThinkTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[connection signal="timeout" from="DebugTimer" to="." method="_on_DebugTimer_timeout"]

[connection signal="timeout" from="ThinkTimer" to="." method="_on_ThinkTimer_timeout"]


